fix vertical align of avatar in mobile

--- a/feedi/static/css/main.css
+++ b/feedi/static/css/main.css
@@ -69,6 +69,13 @@ but we only want it for mobile*/
     align-items: unset!important;
 }
 
+@media screen and (max-width: 768px) {
+    /* used so avatar in level isnt vertical centered */
+    .mobile-top-align {
+        align-items: unset!important;
+    }
+}
+
 .avatar-column {
     padding-right: .25rem!important;
 }
